dist/1.0/bin/sample/retrieveUnpackaged/objects/Opportunity_Pipeline__c.object
<CustomObject>
    <description>Stores data for PL Domesctic Opp. Pipeline</description>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MRD__c</fullName>
        <label>MRD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>HYPERLINK( User_ID__c , Owner_Name__c)</formula>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <label>Owner Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Date__c</fullName>
        <label>Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <label>User ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <formula>TEXT(CASE( 
MOD( Report_Date__c  - DATE(1900, 1, 7), 7), 
0, Report_Date__c- 6 -7, 
1, Report_Date__c - 0 - 7, 
2, Report_Date__c - 1 - 7, 
3, Report_Date__c- 2 - 7, 
4, Report_Date__c- 3 - 7, 
5, Report_Date__c - 4 - 7, 
6, Report_Date__c- 5 -7, null))
&amp;BR()&amp;
TEXT(CASE( 
MOD( Report_Date__c  - DATE(1900, 1, 7), 7), 
0, Report_Date__c- 0 -7, 
1, Report_Date__c+6 - 7, 
2, Report_Date__c +5 -7, 
3, Report_Date__c +4 -7, 
4, Report_Date__c +3 -7, 
5, Report_Date__c +2 -7, 
6,Report_Date__c+1 - 7, null))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week</label>
        <type>Text</type>
    </fields>
    <label>Opportunity Pipeline 1</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Opportunity Pipeline Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Pipeline</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>